# taskPR

./: INDEX  MD5  README  configure  configure.alt  configure.in
..Rcheck/: 00install.out  taskPR-Ex.R  taskPR-Ex.Rout  taskPR-manual.tex
..Rcheck/taskPR/: CONTENTS  DESCRIPTION  INDEX
..Rcheck/taskPR/Meta/: Rd.rds  hsearch.rds  package.rds
..Rcheck/taskPR/R/: taskPR
..Rcheck/taskPR/R-ex/: PE.R  POBJ.R  SetupPE.R  StartWorker.R
..Rcheck/taskPR/exec/: spawnhelper
..Rcheck/taskPR/help/: AnIndex  PE  POBJ  SetupPE  StartWorker
..Rcheck/taskPR/html/: 00Index.html  PE.html  POBJ.html  SetupPE.html  StartWorker.html
..Rcheck/taskPR/latex/: PE.tex  POBJ.tex  SetupPE.tex  StartWorker.tex
R/: first.R  pRMain.R  pRWorker.R
exec/: pRBatch.R
man/: PE.Rd  POBJ.Rd  SetupPE.Rd  StartWorker.Rd
src/: Internal.h  Makefile  Makefile.old  Makevars  Makevars.in  Rconnections.h  create_links.sh  extra.c  hashtable.c  hashtable.h  mpspawn.c  peval.c  peval.h  scheduler.c  scheduler.h  spawnhelper.c  worker.c
